Completely overhauled file reading logic. Added proper reading from advancements file, stats file, unlocks file. Added config for creating 5 different display types: Advancements, stats (with count), unlocks (with count), custom goals (to manually check off, e.g., certain enchanted book acquired, saved as bool in settings.json), multi-stage goals (arbitrary sequential combination of stats and advancements, (maybe manual input in the future)).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,15 @@ set(SOURCE_FILES
         "source/settings_utils.h"
         "source/file_utils.c"
         "source/file_utils.h"
+        "source/data_structures.h"
 
         # Get cJSON
-        "source/cJSON.c"
+        "source/external/cJSON.c"
         "external_libs/include/cJSON.h"
+
+        # get dmon for file watching
+        "source/external/dmon.h"
+
         # Get cJSON utils
         # "external_libs/include/cJSON/cJSON_Utils.c"
         # "external_libs/include/cJSON/cJSON_Utils.h"
