--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -3,7 +3,7 @@
   "manual_saves_path": "C:\Users\Linus\AppData\Roaming\PrismLauncher\instances\1.21.5\minecraft\saves",
   "version": "25w14craftmine",
   "category": "acquire_hardware",
-  "optional_flag": "_test",
+  "optional_flag": "_test2",
   "custom_progress": {
     "custom:unbreaking_3_book": false
   }
