Added bool is_shared to data_structures.h to allow for conflicting criteria to have the parent advancements icon overlaid on top of the criteria icon. In debug print it also shows if an advancement criteria is shared. Added some basic info on the README.md. Fixed stat tracking in multi-stage goals, adding manual override for regular stats and moving translations from multi-stage goals into translation file. Added counter logic (with hotkeys) to custom goals. Allowed -1 for stats goal to track indefinitely until manual override.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -6,5 +6,9 @@
   "optional_flag": "_test2",
   "custom_progress": {
     "custom:unbreaking_3_book": false
+  },
+  "stat_progress_override": {
+    "minecraft:mined/minecraft:oak_log": false,
+    "minecraft:mined/minecraft:acacia_log": true
   }
 }
