Allowing custom goals (that are manually checked off) to also act as counters (if a "target" is set in the template) with dedicated hotkeys for going up and down specified in the settings.json file. You need to be tabbed into the Advancely program though. Also added the custom counter into the debug print. Stat goals can still be overridden manually as well.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -5,10 +5,18 @@
   "category": "acquire_hardware",
   "optional_flag": "_test2",
   "custom_progress": {
-    "custom:unbreaking_3_book": false
+    "custom:unbreaking_3_book": false,
+    "custom:deepslate_emerald_count": 0
   },
   "stat_progress_override": {
     "minecraft:mined/minecraft:oak_log": false,
     "minecraft:mined/minecraft:acacia_log": true
-  }
+  },
+  "hotkeys": [
+    {
+      "target_goal": "custom:deepslate_emerald_count",
+      "increment_key": "PageUp",
+      "decrement_key": "PageDown"
+    }
+  ]
 }
