Now allowing for template changes DURING runtime. Updated README.md with link to available keynames for hotkeys. Adding support for automatically creating template and language files. It now creates an empty skeleton for the template and language file at the desired location chosen in the settings. TODO: Allow to populate that later through the settings file. Comes with 2 new files temp_create_utils.h and temp_create_utils.c. Going through code, optimizing things. Created lookup table to be more flexible with getting version string from minecraft version.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ set(SOURCE_FILES
         "source/file_utils.c"
         "source/file_utils.h"
         "source/data_structures.h"
+        "source/temp_create_utils.c"
+        "source/temp_create_utils.h"
 
         # Get cJSON
         "source/external/cJSON.c"
@@ -42,6 +44,7 @@ set(SOURCE_FILES
 
         # get dmon for file watching
         "source/external/dmon.h"
+
 
         # Get cJSON utils
         # "external_libs/include/cJSON/cJSON_Utils.c"
