Reverted back to stable point. With a small change in main.c hotkeys can now be changed at runtime.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -16,8 +16,8 @@
   "hotkeys": [
     {
       "target_goal": "custom:deepslate_emerald_count",
-      "increment_key": "PageUp",
-      "decrement_key": "PageDown"
+      "increment_key": "O",
+      "decrement_key": "L"
     },
     {
       "target_goal": "custom:diamond_ore_count",
