--- a/resources/config/settings_raw_template.json
+++ b/resources/config/settings_raw_template.json
@@ -1,7 +1,7 @@
 {
   "path_mode":	"manual",
-  "manual_saves_path":	"C:\\Users\\Linus\\AppData\\Roaming\\PrismLauncher\\instances\\1.11.2\\minecraft\\saves",
-  "version":	"1.11.2",
+  "manual_saves_path":	"C:\\Users\\Linus\\AppData\\Roaming\\PrismLauncher\\instances\\1.0\\minecraft\\saves",
+  "version":	"1.0",
   "category":	"test",
   "optional_flag":	"1",
   "general":	{
@@ -11,24 +11,9 @@
     "overlay_scroll_left_to_right":	true,
     "goal_align_left":	true
   },
-  "stat_progress_override":	{
-    "stat_cat:mine_more_sand": false,
-    "stat_cat:break_wooden_shovel": false
-  },
-  "custom_progress":	{
-    "custom:good_view":	false,
-    "custom:fun_counter": 0,
-    "custom:count_100": 0
-  },
-  "hotkeys":	[{
-    "target_goal":	"custom:fun_counter",
-    "increment_key":	"O",
-    "decrement_key":	"L"
-  }, {
-    "target_goal":	"custom:count_100",
-    "increment_key":	"Home",
-    "decrement_key":	"End"
-  }],
+  "stat_progress_override":	{},
+  "custom_progress":	{},
+  "hotkeys":	[{}, {}],
   "visuals":	{
     "tracker_window":	{
       "x":	-2236,
