[v0.8.8] Added setting to turn Overlay on and off, off by default. Parts of the settings window get hidden when Overlay is turned off. Added small check for o to be a nullptr in global_event_handler.cpp.

--- a/resources/config/settings_1_21_8_miku%.json
+++ b/resources/config/settings_1_21_8_miku%.json
@@ -5,6 +5,7 @@
   "category":	"miku%",
   "optional_flag":	"",
   "general":	{
+    "enable_overlay": false,
     "fps":	60,
     "always_on_top":	true,
     "overlay_scroll_speed":	1,
