--- a/resources/config/settings_raw_template.json
+++ b/resources/config/settings_raw_template.json
@@ -5,6 +5,7 @@
   "category":	"test",
   "optional_flag":	"1",
   "general":	{
+    "enable_overlay": false,
     "fps":	60,
     "always_on_top":	true,
     "overlay_scroll_speed":	1,
