--- a/resources/config/settings_1_21_8_miku%.json
+++ b/resources/config/settings_1_21_8_miku%.json
@@ -6,6 +6,7 @@
   "optional_flag":	"",
   "general":	{
     "enable_overlay": false,
+    "using_stats_per_world_legacy": true,
     "fps":	60,
     "always_on_top":	true,
     "overlay_scroll_speed":	1,
