--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -69,6 +69,12 @@
       "g":	255,
       "b":	255,
       "a":	255
+    },
+    "overlay_text_color":	{
+      "r":	255,
+      "g":	255,
+      "b":	255,
+      "a":	255
     }
   }
 }
