[v0.8.28] Added progress text to overlay window with socials. Added new format_utils files to avoid code duplication on progress text.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ set(SOURCE_FILES
         "source/path_utils.cpp"
         "source/settings_utils.cpp"
         "source/file_utils.cpp"
+        "source/format_utils.cpp" # for formatting strings
         "source/temp_create_utils.cpp"
 
         # External libraries included as source and stay in C
