[v0.9.8] Cleaned up code in tracker.cpp and overlay.cpp Made sure 3rd row has an option whether it should disappear or not. Made sure that the 2nd row doesn't get effected by "Remove Completed Goals".

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -10,6 +10,7 @@
     "fps":	60,
     "overlay_scroll_speed":	1,
     "overlay_animation_speedup": false,
+    "overlay_row3_remove_completed": false,
     "always_on_top":	true,
     "remove_completed_goals": true,
     "goal_align_left":	true,
