--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -8,6 +8,11 @@
     "using_stats_per_world_legacy": true,
     "enable_overlay": false,
     "fps":	60,
+    "overlay_show_world": true,
+    "overlay_show_run_details": true,
+    "overlay_show_progress": true,
+    "overlay_show_igt": true,
+    "overlay_show_update_timer": true,
     "overlay_scroll_speed":	1,
     "overlay_animation_speedup": false,
     "overlay_row3_remove_completed": false,
