[v0.9.16] BETA RELEASE!! Set 1.16 All Advancements Template as default and fully configured the template!

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -2,8 +2,8 @@
   "path_mode":	"manual",
   "manual_saves_path":	"C:\\Users\\Linus\\AppData\\Roaming\\PrismLauncher\\instances\\1.16.1\\minecraft\\saves",
   "version":	"1.16.1",
-  "category":	"test",
-  "optional_flag":	"1",
+  "category":	"All_Advancements",
+  "optional_flag":	"",
   "general":	{
     "using_stats_per_world_legacy": true,
     "enable_overlay": false,
