--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -2,50 +2,33 @@
   "path_mode":	"auto",
   "manual_saves_path":	"",
   "version":	"1.16.1",
-  "category":	"All_Advancements",
+  "category":	"all_advancements",
   "optional_flag":	"",
   "general":	{
-    "using_stats_per_world_legacy": true,
-    "enable_overlay": false,
+    "enable_overlay":	false,
+    "using_stats_per_world_legacy":	true,
     "fps":	60,
-    "overlay_show_world": true,
-    "overlay_show_run_details": true,
-    "overlay_show_progress": true,
-    "overlay_show_igt": true,
-    "overlay_show_update_timer": true,
-    "overlay_scroll_speed":	1,
-    "overlay_animation_speedup": false,
-    "overlay_row3_remove_completed": false,
     "always_on_top":	true,
-    "remove_completed_goals": true,
-    "overlay_progress_text_align": "left",
-    "print_debug_status": false
+    "overlay_scroll_speed":	1,
+    "remove_completed_goals":	true,
+    "print_debug_status":	false,
+    "overlay_progress_text_align":	"left",
+    "overlay_animation_speedup":	false,
+    "overlay_row3_remove_completed":	false,
+    "overlay_show_world":	true,
+    "overlay_show_run_details":	true,
+    "overlay_show_progress":	true,
+    "overlay_show_igt":	true,
+    "overlay_show_update_timer":	true
   },
   "stat_progress_override":	{
-    "stat_cat:whatever": false,
-    "stat_cat:whatever.criteria.minecraft:custom/minecraft:open_chest": false,
-    "stat_cat:whatever.criteria.minecraft:used/minecraft:oak_door": false,
-    "stat_cat:whatever.criteria.minecraft:custom/minecraft:sneak_time": false,
-    "stat_cat:whatever2": false,
-    "stat_cat:whatever2.criteria.minecraft:custom/minecraft:open_chest": false,
-    "stat_cat:whatever2.criteria.minecraft:custom/minecraft:sneak_time": false,
-    "stat_cat:mine_more_sand": false,
-    "stat_cat:break_wooden_shovel": false
+    "stat:gold_blocks_picked_up":	false,
+    "stat:wither_skeletons_killed":	false,
+    "stat:tnt_picked_up":	false,
+    "stat:debris_picked_up":	false,
+    "stat:bee_nests_picked_up":	false
   },
-  "custom_progress":	{
-    "custom:good_view":	false,
-    "custom:fun_counter": 0,
-    "custom:count_100": 0
-  },
-  "hotkeys":	[{
-    "target_goal":	"custom:fun_counter",
-    "increment_key":	"O",
-    "decrement_key":	"L"
-  }, {
-    "target_goal":	"custom:count_100",
-    "increment_key":	"Home",
-    "decrement_key":	"End"
-  }],
+  "custom_progress":	{},
   "visuals":	{
     "tracker_window":	{
       "x":	-1,
@@ -83,5 +66,6 @@
       "b":	255,
       "a":	255
     }
-  }
+  },
+  "hotkeys": []
 }
