[v0.9.20] Updated the way proper stat_categories with criteria display on the overlay, to include the info of its sub-stats. Updated VERY OUTDATED function descriptions in overlay.h. Added tooltip for FPS slider. Added hover text to progress window. Added "Open Instance Folder" button for valid path.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -14,6 +14,7 @@
     "print_debug_status":	false,
     "overlay_progress_text_align":	"left",
     "overlay_animation_speedup":	false,
+    "overlay_stat_cycle_speed": 3.0,
     "overlay_row3_remove_completed":	false,
     "overlay_show_world":	true,
     "overlay_show_run_details":	true,
