--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -21,8 +21,7 @@
     "overlay_show_progress":	true,
     "overlay_show_igt":	true,
     "overlay_show_update_timer":	true,
-    "notes_use_roboto_font":	false,
-    "notes_font_size": 16.0
+    "notes_use_roboto_font":	false
   },
   "stat_progress_override":	{
     "stat:gold_blocks_picked_up":	false,
