[v0.9.34] Added setting that lets you choose order ordering of the sections on the tracker window.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -5,6 +5,7 @@
   "category":	"all_advancements",
   "optional_flag":	"",
   "general":	{
+    "section_order":	[0, 1, 2, 3, 4],
     "enable_overlay":	false,
     "using_stats_per_world_legacy":	true,
     "fps":	60,
