[v0.9.39] Multi-Process-Branch Commit 4 - Added basic 1.0 all_achievements template. Fixed legacy achievement count counting any achievements towards the progress not just (New). Overlay window is now a separate process so OBS Gamecapture properly recognizes it as a separate window. Basically the overlay window will read what the tracker sends it and only display. The tracker and overlay now have separate loops, which means the have individual FPS control. You can open ONLY the tracker window with "./Advancely.exe --overlay" in a console. Updated the cherry grove icon in the 1.21.8 templates.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -9,6 +9,7 @@
     "enable_overlay":	false,
     "using_stats_per_world_legacy":	true,
     "fps":	60,
+    "overlay_fps": 60,
     "always_on_top":	true,
     "overlay_scroll_speed":	1,
     "remove_completed_goals":	true,
