[v0.9.55] Fixed resource files getting properly replaced.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -268,28 +268,28 @@ add_custom_command(TARGET Advancely POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
         "${CMAKE_SOURCE_DIR}/_PLEASE_READ_ME.txt"
         "$<TARGET_FILE_DIR:Advancely>"
-        COMMENT "Copying _PLEASE_READ_ME.txt to output directory..."
+        COMMENT "[CMAKE] Copying _PLEASE_READ_ME.txt to output directory..."
 )
 
 add_custom_command(TARGET Advancely POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
         "${CMAKE_SOURCE_DIR}/LICENSE"
         "$<TARGET_FILE_DIR:Advancely>"
-        COMMENT "Copying LICENSE to output directory..."
+        COMMENT "[CMAKE] Copying LICENSE to output directory..."
 )
 
 add_custom_command(TARGET Advancely POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
         "${CMAKE_SOURCE_DIR}/LICENSES.txt"
         "$<TARGET_FILE_DIR:Advancely>"
-        COMMENT "Copying LICENSES.txt to output directory..."
+        COMMENT "[CMAKE] Copying LICENSES.txt to output directory..."
 )
 
 add_custom_command(TARGET Advancely POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy
         "${CMAKE_SOURCE_DIR}/README.md"
         "$<TARGET_FILE_DIR:Advancely>"
-        COMMENT "Copying README.md to output directory..."
+        COMMENT "[CMAKE] Copying README.md to output directory..."
 )
 
 
