[v0.9.57] Added update confirmation window with link to release notes. Made sure Linux and macOS update-file copying is consistent with the windows version only copying the templates, icons, gui and fonts folders. Added logo to the "Update Successful!" window also created no "greetings window" on startup that also includes a small tutorial on how to use the tracker. Also added a setting to turn it off. Added feature idea section in README.md.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -24,7 +24,8 @@
     "overlay_show_igt":	true,
     "overlay_show_update_timer":	true,
     "notes_use_roboto_font":	false,
-    "check_for_updates": true
+    "check_for_updates": true,
+    "show_welcome_on_startup": true
   },
   "stat_progress_override":	{
     "stat:gold_blocks_picked_up":	false,
