[v0.9.68] Created a new "Template Creator" button and window.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SOURCE_FILES
         "source/settings_utils.cpp"
         "source/file_utils.cpp"
         "source/format_utils.cpp" # for formatting strings
+        "source/temp_creator.cpp"
         "source/temp_creator_utils.cpp"
         "source/template_scanner.cpp"
         "source/update_checker.cpp"
