[v0.9.105] Added support for multiple language files added german template (might still be off a lot though). Made sure you can't copy empty language file.

--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -4,6 +4,7 @@
   "version":	"1.16.1",
   "category":	"all_advancements",
   "optional_flag":	"",
+  "lang_flag": "",
   "general":	{
     "section_order":	[0, 1, 2, 3, 4],
     "enable_overlay":	false,
