--- a/resources/config/settings.json
+++ b/resources/config/settings.json
@@ -25,6 +25,7 @@
     "overlay_show_igt":	true,
     "overlay_show_update_timer":	true,
     "notes_use_roboto_font":	false,
+    "per_world_notes": true,
     "check_for_updates": true,
     "show_welcome_on_startup": true
   },
